# lume

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.light.yml  docker-compose.services.yml  docker-compose.yml  openapi.json  pyproject.toml  requirements.gpu.txt  requirements.light.txt  requirements.txt  start_gpu.bat  start_light.bat  start_light.sh
.github/workflows/: ci.yml
backend/: cli.py  config.py  requirements.light.txt  requirements.txt
backend/api/routes/: assistants.py  chat.py  chatbot.py  crawl.py  evaluation.py  executions.py  knowledge_base.py  ollama.py
backend/api/routes/old/: chatbot.py
backend/api/routes/sources/: file.py  website.py
backend/app/: dependencies.py  exception_handlers.py  exceptions.py  main.py
backend/app/core/agents/: pydantic_agent.py  smolagents_agent.py
backend/app/core/services/: chatbot_service.py
backend/app/core/tools/: retriever.py
backend/core/: chunking.py  embeddings.py  generator.py  llm.py  retriever.py  utils.py
backend/core/assistants/: __init__.py  base.py  qa_assistant.py  registry.py
backend/core/components/generators/: __init__.py  llm_generator.py
backend/core/components/retrievers/: __init__.py  hf_reranker.py  hybrid_retriever.py
backend/crawl4ai/: app.py  requirements.txt
backend/crawler/: app.py  requirements.txt
backend/db/: mongodb.py  qdrant.py
backend/db/repositories/: assistant_repo.py  evaluation_repo.py  knowledge_base_repo.py
backend/models/: assistant.py
backend/schemas/: assistant.py  collections.py  evaluation.py
backend/scripts/: export_openapi.py
backend/services/: assistant_service.py  evaluation_service.py  knowledge_base_service.py  task_progress.py
backend/services/ingestion/: file_parser.py  website_scraper.py
backend/tests/unit/: test_assistant_repo.py  test_assistant_routes.py  test_assistant_service.py
docker/: api.Dockerfile  api.gpu.Dockerfile  api.light.Dockerfile  crawl4ai.Dockerfile  crawler.Dockerfile  frontend.Dockerfile
frontend/: Manage_Chatbots.py  app.py  index.html  orval.config.ts  package-lock.json  package.json  requirements.txt  utils.py
frontend/pages/: Chat.py  Evaluation.py  Knowledge_Base.py  chat.py  evaluation.py  knowledge_base.py  settings.py
frontend/src/: App.jsx  index.css  main.jsx  theme.css
frontend/src/api/: axios-instance.ts  generated.ts  streaming.ts
frontend/src/components/: Layout.jsx  SmartTooltip.jsx
frontend/src/components/assistants/: AdvancedSettings.jsx  AssistantCard.jsx  AssistantForm.jsx  AssistantGrid.jsx  ModelSelector.jsx
frontend/src/components/chat/: AssistantSelector.jsx  ChatInput.jsx  ChatbotSelector.jsx  MessageBubble.jsx  MessageList.jsx  SourcesList.jsx
frontend/src/components/chatbots/: AdvancedSettings.jsx  ChatbotCard.jsx  ChatbotForm.jsx  ChatbotGrid.jsx  ModelSelector.jsx
frontend/src/components/evaluation/: ActionMenu.jsx  AssistantMultiSelector.jsx  DatasetCard.jsx  DatasetCreator.jsx  DatasetDetailView.jsx  DatasetEditor.jsx  DatasetForm.jsx  DatasetList.jsx  DatasetManager.jsx  DatasetSelector.jsx  EvaluationComparison.jsx  EvaluationComparisonTable.jsx  EvaluationModelSelector.jsx  EvaluationResults.jsx  EvaluationRunner.jsx  EvaluationVisualizations.jsx  EvaluationWorkflow.jsx  FormSelect.jsx  MetricScatterPlot.jsx  MetricsBarChart.jsx  MetricsRadarChart.jsx  OverallSummary.jsx  PerformanceHeatmap.jsx  QAPairInput.jsx  QuestionResponseComparison.jsx  WinLossMatrix.jsx
frontend/src/components/knowledge/: CollectionForm.jsx  CollectionSidebar.jsx  DocumentViewer.jsx  FileWizard.jsx  SourceTypeSelector.jsx  UploadProgress.jsx  WatchWebsiteKnowledge.jsx
frontend/src/components/knowledge/CrawlWizard/: CrawlSettings.jsx  LinkDiscovery.jsx  index.jsx  (+2 more)
frontend/src/components/shared/: Accordion.jsx  Badge.jsx  Button.jsx  Card.jsx  ConfirmDialog.jsx  EmptyState.jsx  ErrorAlert.jsx  FormInput.jsx  FormSelect.jsx  FormTextarea.jsx  LoadingSpinner.jsx  Modal.jsx  PageHeader.jsx  ProgressBar.jsx  SearchInput.jsx  StatDisplay.jsx  Wizard.jsx
frontend/src/constants/: models.js  sourceTypes.js
frontend/src/hooks/: useAssistants.js  useChatbots.js  useCollections.js  useDatasets.js  useEvaluation.js  useEvaluationComparison.js  useFileUpload.js  useUploadProgress.js  useWebCrawl.js  useWebsiteUpload.js
frontend/src/pages/: AssistantsPage.jsx  ChatPage.jsx  ChatbotsPage.jsx  EvaluationPage.jsx  KnowledgeBasePage.jsx
frontend/src/pages/old/: ChatPage.jsx  ChatbotsPage.jsx  EvaluationPage.jsx  KnowledgeBasePage.jsx
frontend/src/services/: api.js
frontend/src/utils/: assistantUtils.js  formatters.js  validators.js
