[project]
name = "backend"
version = "0.1.0"
description = "Lume Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "qdrant-client",
    "litellm",
    "httpx",
    "langchain-community",
    "langchain-qdrant",
    "langchain-ollama",
    "langchain-openai",
    "langchain-cohere",
    "langchain-text-splitters",
    "fastembed-gpu",
    "pymongo",
    "ragas",
    "rapidfuzz",
    "cohere",
    "pydantic-ai",
    "arize-phoenix",
    "arize-phoenix-otel",
    "openinference-instrumentation-langchain",
    "FlagEmbedding",
    "crawl4ai",
    "llama-index",
    "llama-parse",
    "colorlog>=6.10.1",
]

[project.scripts]
dev = "backend.cli:dev"
export-spec = "backend.scripts.export_openapi:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8.0",
    "basedpyright>=1.21.0",
    "pyright>=1.1.408",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["backend"]
exclude = [
    "**/__pycache__",
    ".venv",
]

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["Depends", "fastapi.Depends", "Query", "fastapi.Query"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
